syntax = "proto3";

package com.chicago.dto;

option java_package = "com.chicago.dto";

message TransactionKey
{
    string transaction_id = 1;
    string data_type = 2;
}

message TransactionError
{
    int32 error_code = 1;
    string error_message = 2;
}
