syntax = "proto3";

package com.chicago.dto;

import "common.proto";
import "searchfilters.proto";

option java_package = "com.chicago.dto";

message SearchFiltersRequest
{
    CrudOperation crud_operation = 1;
    SearchFilters searchfilters = 2;
}

message SearchFiltersResponse
{
    repeated Property property = 1;
    TransactionError transaction_error = 2;
}

message SearchFiltersCatalogRequest
{
    CrudOperation crud_operation = 1;
    string userId = 2;
}

message SearchFiltersCatalogResponse
{
    repeated SearchFilters searchfilters = 1;
    TransactionError transaction_error = 2;
}
